# sigrok-androidutils

./: CMakeLists.txt  build.xml
lib/: libsigrokandroidutils.pc.in
